# willpyre

./: .coverage  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  LICENSE  LICENSE.rst  README.md  TODOS.md  coverage.xml  junk  pyproject.toml  setup.py  setup.py.bak  xaa
.github/workflows/: actions.yml
docs/: requirements.txt
docs/source/: advanced.rst  conf.py  index.rst  installation.rst  middleware.rst  models.rst  quick_start.rst  swagger.rst  theme.conf  tutorial.rst
docs/source/documentation/: app.rst  index.rst  router.rst  structure.rst
example_api/: crud.py  events.json  main.py  requirements.txt  schemas.py  users.json
maglev/: __init__.py  app.py  kua.py  router.py  structure.py  test.py
tests/: .coverage  dev_requirements.txt  myapp.py  openapi_app.py  staticapp.py  test_embed.py  test_middleware.py  test_plain.py  test_redirect.py  test_static_router.py
willpyre/: __init__.py  app.py  asgi.py  common.py  kua.py  openapi.py  router.py  schema.py  structure.py
willpyre.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
